2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Added test for
	  'Bug 427448 - Code Completion: completion of constructor parameters
	  not working'.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test case for
	  interface code completion bug.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs,
	  MonoDevelop.CSharpBinding/CodeCompletionTests.cs: Added operator
	  completion tests.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit tests
	  for 'Bug 427734 - Code Completion issues with enums'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit test for
	  'Bug 427649 - Code Completion: protected methods shown in code
	  completion'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit test for
	  'Bug 405000 - Namespace alias qualifier operator (::) does not
	  trigger code completion'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/DomPersistenceTests.cs: Extended persistance
	  unit test to document a bug.

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit test for
	  "Bug 427294 - Code Completion: completion on values returned by
	  methods doesn't work".

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test for "Bug
	  427284 - Code Completion: class list shows the full name of
	  classes".

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: Added some unit
	  tests.

2008-09-17  Mike Krüger <mkrueger@novell.com> 

	* UnitTests.mdp, MonoDevelop.CSharpBinding/TestViewContent.cs,